Fix login/registration UI in header
- Updated header login button to use generic user icon instead of Twitch
- Fixed mobile login button structure and styling
- Added event listener for mobile login button
- Login/registration modal is now accessible from header

--- a/components/header.html
+++ b/components/header.html
@@ -19,7 +19,7 @@
                     <i class="fas fa-moon"></i>
                 </button>
                 <button id="loginBtn" class="login-btn">
-                    <i class="fab fa-twitch"></i>
+                    <i class="fas fa-user"></i>
                     Anmelden
                 </button>
                 <button id="adminBtn" class="admin-btn hidden">
@@ -48,8 +48,8 @@
     </ul>
     <div class="mobile-actions">
         <button id="mobileLoginBtn" class="mobile-action-btn">
-            <i class="fab fa-twitch"></i>
-            <span>Login</span>
+            <i class="fas fa-user"></i>
+            <span>Anmelden</span>
         </button>
         <button id="mobileAdminBtn" class="mobile-action-btn admin-btn" style="display: none;">
             <i class="fas fa-cog"></i>
