Add admin utilities and test files for user management and API testing

--- a/components/header.html
+++ b/components/header.html
@@ -11,7 +11,7 @@
                 <a href="streams.html" class="nav-link">Streams</a>
                 <a href="api.html" class="nav-link">API</a>
                 <a href="analytics.html" class="nav-link">Analytics</a>
-                <a href="admin.html" class="nav-link">Admin</a>
+                <a href="admin.html" class="nav-link admin-nav-link hidden">Admin</a>
             </div>
             
             <div class="nav-actions">
@@ -44,7 +44,7 @@
         <li><a href="streams.html" class="mobile-nav-link">Streams</a></li>
         <li><a href="api.html" class="mobile-nav-link">API</a></li>
         <li><a href="analytics.html" class="mobile-nav-link">Analytics</a></li>
-        <li><a href="admin.html" class="mobile-nav-link">Admin</a></li>
+        <li><a href="admin.html" class="mobile-nav-link admin-nav-link hidden">Admin</a></li>
     </ul>
     <div class="mobile-actions">
         <button id="mobileLoginBtn" class="mobile-action-btn">
