--- a/components/header.html
+++ b/components/header.html
@@ -3,15 +3,15 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="index.html">Stream Archiv</a>
+                <a href="app.html">Stream Archiv</a>
             </div>
             
             <div class="nav-menu">
-                <a href="index.html" class="nav-link">Home</a>
-                <a href="streams.html" class="nav-link">Streams</a>
-                <a href="api.html" class="nav-link">API</a>
-                <a href="analytics.html" class="nav-link">Analytics</a>
-                <a href="admin.html" class="nav-link admin-nav-link hidden">Admin</a>
+                <a href="app.html" class="nav-link">Home</a>
+                <a href="app.html?page=streams" class="nav-link">Streams</a>
+                <a href="app.html?page=api" class="nav-link">API</a>
+                <a href="app.html?page=analytics" class="nav-link">Analytics</a>
+                <a href="app.html?page=admin" class="nav-link admin-nav-link hidden">Admin</a>
             </div>
             
             <div class="nav-actions">
@@ -40,11 +40,11 @@
 <!-- Mobile Menu -->
 <div id="mobileMenu" class="mobile-menu">
     <ul class="mobile-nav-list">
-        <li><a href="index.html" class="mobile-nav-link">Home</a></li>
-        <li><a href="streams.html" class="mobile-nav-link">Streams</a></li>
-        <li><a href="api.html" class="mobile-nav-link">API</a></li>
-        <li><a href="analytics.html" class="mobile-nav-link">Analytics</a></li>
-        <li><a href="admin.html" class="mobile-nav-link admin-nav-link hidden">Admin</a></li>
+        <li><a href="app.html" class="mobile-nav-link">Home</a></li>
+        <li><a href="app.html?page=streams" class="mobile-nav-link">Streams</a></li>
+        <li><a href="app.html?page=api" class="mobile-nav-link">API</a></li>
+        <li><a href="app.html?page=analytics" class="mobile-nav-link">Analytics</a></li>
+        <li><a href="app.html?page=admin" class="mobile-nav-link admin-nav-link hidden">Admin</a></li>
     </ul>
     <div class="mobile-actions">
         <button id="mobileLoginBtn" class="mobile-action-btn">
